- Fixed object: Chinese Cedar Tree (rct2.scenery_small.tcc)
- Fixed object: Fruit Tree (rct2.scenery_small.tf1)
- Fixed object: Fruit Tree (rct2.scenery_small.tf2)
- Fixed object: Cabbage Tree (rct2.scenery_small.tct)
- Fixed object: Canary Palm Tree (rct2.scenery_small.th1)
- Fixed object: Palm Tree (rct2.scenery_small.th2)
- Fixed object: Bush (rct2.scenery_small.tsh0)
- Fixed object: Railings (rct2.scenery_wall.wallmm17)
- Fixed object: Roman Column Wall (rct2.scenery_wall.wc3)
- Fixed object: Egyptian Statue (rct2.scenery_small.tes1)
- Fixed object: Tree (rct2.scenery_small.tl0)
- Fixed object: Tree (rct2.scenery_small.tl1)
- Fixed object: Tree (rct2.scenery_small.tl2)
- Fixed object: Tree (rct2.scenery_small.tl3)
- Fixed object: Tree (rct2.scenery_small.tm0)
- Fixed object: Tree (rct2.scenery_small.tm1)
- Fixed object: Tree (rct2.scenery_small.tm2)
- Fixed object: Tree (rct2.scenery_small.tm3)
- Fixed object: Tree (rct2.scenery_small.tjt1)
- Fixed object: Tree (rct2.scenery_small.tjt2)
- Fixed object: Tree (rct2.scenery_small.tjt3)
- Fixed object: Tree (rct2.scenery_small.tjt4)
- Fixed object: Tree (rct2.scenery_small.tjt5)
- Fixed object: Logs (rct2.scenery_small.tml)
- Fixed object: Barrel (fidwell.scenery_small.tbr3)
- Fixed object: Barrel (fidwell.scenery_small.tbr4)
- Fixed object: Graveyard Monument (rct2.scenery_small.tmm2)
- Fixed object: Graveyard Monument (rct2.scenery_small.tmm3)
- Fixed object: Japanese Cherry Tree (rct2ww.scenery_small.jachtree)
- Fixed object: Japanese Cherry Blossom Tree (rct2ww.scenery_small.japchblo)
- Fixed object: Japanese Snowball Tree (rct2ww.scenery_small.japsnotr)
- Fixed object: Sandstone Skyscraper Walkway (rct2tt.scenery_small.futsky01)
- Fixed object: Roman Palace Cross Section (rct2tt.scenery_large.romnm2x2)
- Updated object: Hiba Tree (rct2.scenery_small.tghc2)
- Updated object: Common Juniper Tree (rct2.scenery_small.tcj)
- Updated object: Caucasian Fir Tree (rct2.scenery_small.tcf)