@@ -1,0 +1,41 @@
+{
+    "id": "fidwell.scenery_wall.wmfg",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "09F55B03|1KFNCCMF|17E7C381",
+    "sourceGame": "custom",
+    "objectType": "scenery_wall",
+    "properties": {
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true,
+        "isOpaque": true,
+        "height": 2,
+        "price": 40
+    },
+    "images": [
+      { "path": "images/0.png", "x": -31, "y": -16 },
+      { "path": "images/1.png", "x": -1, "y": -15 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Mesh Fence",
+            "fr-FR": "Grillage",
+            "de-DE": "Maschendrahtzaun",
+            "es-ES": "Cerca de malla",
+            "it-IT": "Recinto a rete",
+            "nl-NL": "Gaashek",
+            "sv-SE": "Nätstaket",
+            "ko-KR": "그물 철책",
+            "zh-CN": "网状栅栏",
+            "zh-TW": "網狀柵欄",
+            "pt-BR": "Cerca de Tela",
+            "cs-CZ": "Drátěný plot",
+            "ja-JP": "メッシュのフェンス",
+            "pl-PL": "Płot z siatki",
+            "ru-RU": "Изгородь",
+            "eo-ZZ": "Maŝa Barilo",
+            "ca-ES": "Tanca de malla",
+            "fi-FI": "Verkkoaita"
+        }
+    }
+}
