@@ -1,0 +1,45 @@
+{
+    "id": "fidwell.scenery_wall.wswg",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "sourceGame": "custom",
+    "objectType": "scenery_wall",
+    "properties": {
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true,
+        "hasTertiaryColour": true,
+        "isOpaque": true,
+        "height": 3,
+        "price": 50
+    },
+    "images": [
+      { "path": "images/0.png", "x": -32, "y": -17 },
+      { "path": "images/1.png", "x": -1, "y": -16 },
+      { "path": "images/2.png", "x": -32, "y": -32 },
+      { "path": "images/3.png", "x": -1, "y": -32 },
+      { "path": "images/4.png", "x": -32, "y": -17 },
+      { "path": "images/5.png", "x": -1, "y": -19 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Railings",
+            "fr-FR": "Grille",
+            "de-DE": "Geländer",
+            "es-ES": "Enrejado",
+            "it-IT": "Ringhiera",
+            "nl-NL": "Traliewerk",
+            "sv-SE": "Räcken",
+            "ko-KR": "철책",
+            "zh-CN": "栏杆",
+            "zh-TW": "欄杆",
+            "pt-BR": "Grades",
+            "cs-CZ": "Zábradlí",
+            "ja-JP": "ガードレール",
+            "pl-PL": "Płot z prętów",
+            "ru-RU": "Перила",
+            "eo-ZZ": "Balustrado",
+            "ca-ES": "Reixat",
+            "fi-FI": "Kaide"
+        }
+    }
+}
