@@ -77,6 +77,8 @@
 - Fixed object: Canary Palm Tree (rct2.scenery_small.th1)
 - Fixed object: Palm Tree (rct2.scenery_small.th2)
 - Fixed object: Bush (rct2.scenery_small.tsh0)
+- Fixed object: Railings (rct2.scenery_wall.wsw)
+- Fixed object: Railings (rct2.scenery_wall.wswg)
 - Fixed object: Railings (rct2.scenery_wall.wallmm17)
 - Fixed object: Roman Column Wall (rct2.scenery_wall.wc3)
 - Fixed object: Egyptian Statue (rct2.scenery_small.tes1)
@@ -118,6 +120,8 @@
 - Updated object: Giraffe Statue (rct2.scenery_small.tgs)
 - Updated object: Cactus (rct2.scenery_small.tbc)
 - Updated object: Cactus (rct2.scenery_small.tsc)
+- Updated object: Mesh Fence (rct2.scenery_wall.wmf)
+- Updated object: Mesh Fence (rct2.scenery_wall.wmfg)
 - Updated object: Roof (rct2.scenery_small.sumrf)
 - Updated object: Roman Colosseum (rct2.scenery_large.scol)
 - Updated object: Roman Column (rct2.scenery_small.trc)
